--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header nav ul li a {
     text-align: center;
     padding: 50px 20px;
 }
-
+ 
 .predictions, .charts, .about {
     text-align: center;
     padding: 40px 20px;
@@ -61,7 +61,31 @@ header nav ul li a {
     width: 80%;
     margin: 0 auto;
 }
-
+.ticker-container {
+    background-color: #092f21; /* emerald green */
+    color: #fff;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 10px 0;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+  }
+  
+  .ticker {
+    display: inline-block;
+    padding-left: 100%;
+    animation: scroll-left 20s linear infinite;
+  }
+  
+  @keyframes scroll-left {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
 footer {
     background-color: #092f21; /* Emerald Green for footer */
     color: #fff;
